--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "AGALCodePrinters"]
-	path = AGALCodePrinters
-	url = https://github.com/harayoki/AGALCodePrinters.git
+[submodule "Starling2FiltersAndStyles"]
+	path = Starling2FiltersAndStyles
+	url = https://github.com/harayoki/Starling2FiltersAndStyles.git
