--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Starling2FiltersAndStyles"]
 	path = Starling2FiltersAndStyles
-	url = https://github.com/harayoki/Starling2FiltersAndStyles.git
+	url = https://harayoki@github.com/harayoki/Starling2FiltersAndStyles.git
